fix condition text "better" tuning for conditions

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 			}
 
 			function draw_condition_warning(condition,x,y) {
+				console.log("DRAWING CONDITION", condition);
 				ctx.fillStyle = "red";
 				ctx.textBaseline = "top";
 				ctx.font = "20px courier";
