green ship dies green

--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
 					pCtx.fillStyle = "blue";
 				} else if (color == 2) {
 					pCtx.fillStyle = "red";
+				} else if (color == 3) {
+					pCtx.fillStyle = "green";
 				} else {
 					pCtx.fillStyle = "white";
 				}
